[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fca-mcp-server"
version = "0.1.0"
description = "A Formal Concept Analysis (FCA) server for MCP, enabling LLMs to perform hierarchical data clustering and logical rule discovery."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Jes Fink-Jensen", email = "jes@finkjensen.be" }
]
keywords = [
    "mcp",
    "fca",
    "formal concept analysis",
    "lattice",
    "data-mining",
    "claude",
    "context-analysis"
]
dependencies = [
    "fastmcp>=0.1.0",
    "concepts>=0.9.2",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "graphviz>=0.20.0",
]

[project.scripts]
fca-mcp = "main:mcp.run"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
